package fi.iki.ede.safe.ui

enum class TestTag {
    BIOMETRICS_BUTTON,
    BIOMETRICS_CHECKBOX,
    CATEGORY_BUTTON,
    CATEGORY_MOVE_ROW,
    CATEGORY_ROW,
    CATEGORY_ROW_DELETE,
    CATEGORY_ROW_DELETE_CANCEL,
    CATEGORY_ROW_DELETE_CONFIRM,
    CATEGORY_ROW_EDIT,
    CATEGORY_TEXT_FIELD,
    TAG_HELP,
    LOGIN_BIOMETRICS_REGISTER,
    LOGIN_BIOMETRICS_VERIFY,
    LOGIN_BUTTON,
    PASSWORD_PROMPT,
    SEARCH_MATCH,
    SEARCH_TEXT_FIELD,
    TOP_ACTION_BAR_ADD,
    TOP_ACTION_BAR_SEARCH,
    TOP_ACTION_BAR_MENU,
    TOP_ACTION_BAR_GENERATE_PASSWORD,
    TOP_ACTION_BAR_LOCK,
    PASSWORD_TEXT_FIELD,
    CHANGE_PASSWORD_OK,
    LOGIN_ANEW_BUTTON,
    PREFERENCES_SAVE_LOCATION,
    TRASH_ITEM,
    SITE_ENTRY_DESCRIPTION,
    SITE_ENTRY_WEBSITE,
    SITE_ENTRY_USERNAME,
    SITE_ENTRY_PASSWORD,
    SITE_ENTRY_NOTE,
    SITE_ENTRY_SAVE_DIALOG,
    SITE_ENTRY_EXTENSION_ENTRY_CHECKBOX,
    SITE_ENTRY_EXTENSION_ENTRY,
    SITE_ENTRY_EXTENSION_EXPANSION,

    // TODO: move to extension function in TESTS
    PASSWORD_COMPOSABLE_IN_TESTS,
}
